--- a/styles/admin/blogs.module.scss
+++ b/styles/admin/blogs.module.scss
@@ -2,20 +2,23 @@
 
 
 .blogs {
-    button {
-        width: 42vw;
-        height: 4vw;
-        border: none;
-        border-radius: .5vw;
-        background-color: rgb(19, 180, 255);
-        margin-bottom: 1vw;
-        font-size: 2vw;
-        font-family: 'Visby Bold';
-        letter-spacing: .2vw;
-        color: $light;
-        transition: all .3s ease-in-out;
-        cursor: pointer;
-        margin-top: .5vw;
-        margin-bottom: 2vw;
+    width: 85vw;
+    margin-left: 15vw;
+    padding: 1vw 5vw 5vw 5vw;
+
+    h2 {
+        font-family: "Visby Bold";
+        font-size: 2.5vw;
+        color: $primary;
+        margin: 0;
+    }
+
+    .all_blogs {
+        margin-top: 2vw;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(23vw, 1fr));
+        grid-row-gap: 5vw;
+
+     
     }
 }
