--- a/styles/admin/blogs.module.scss
+++ b/styles/admin/blogs.module.scss
@@ -22,3 +22,35 @@
      
     }
 }
+
+.create{
+    width: 85vw;
+    margin-left: 15vw;
+    padding: 1vw 5vw 5vw 5vw;
+
+    h2{
+        font-family: "Visby Bold";
+        font-size: 2.5vw;
+        color: $primary;
+        margin: 0;
+    }
+
+    .layouts{
+        margin-top: 2vw;
+        display: flex;
+        gap: 1vw;
+        img{
+            width: 23vw;
+            height: 45vw;
+            object-fit: contain;
+            margin-right: 1vw;
+            cursor: pointer;
+
+            &:hover{
+                &data-title{
+                    display: block;
+                }
+            }
+        }
+    }
+}
