--- a/styles/admin/components/layouts.module.scss
+++ b/styles/admin/components/layouts.module.scss
@@ -63,7 +63,7 @@
                         outline: none;
                     }
 
-                    color: $secondary;
+                    color: $dark;
                     font-family: "Visby Bold";
                     font-size: 1vw;
 
