--- a/styles/admin/components/layouts.module.scss
+++ b/styles/admin/components/layouts.module.scss
@@ -142,3 +142,150 @@
         }
     }
 }
+
+.content_layout_1 {
+    width: 85vw;
+    margin-left: 15vw;
+    padding: 1vw 5vw 5vw 5vw;
+
+    .admin_options {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-bottom: 2vw;
+        gap: 2vw;
+
+        button {
+
+            // edit and delete buttons
+            &:nth-child(1) {
+                width: max-content;
+                height: 3vw;
+                padding: 0 1vw;
+                border: $dark 0.1vw solid;
+                background: $light;
+                color: $dark;
+                font-family: "Visby Regular";
+                font-size: 1.5vw;
+                cursor: pointer;
+                margin-top: 1vw;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    background: $dark;
+                    color: $light;
+                }
+            }
+
+            &:nth-child(2) {
+                width: max-content;
+                height: 3vw;
+                border: red 0.1vw solid;
+                background: $light;
+                color: red;
+                font-family: "Visby Regular";
+                font-size: 1.5vw;
+                cursor: pointer;
+                margin-top: 1vw;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    background: red;
+                    color: $light;
+                }
+            }
+
+
+        }
+
+        hr {
+            width: 100%;
+            height: 0.1vw;
+            background: $secondary;
+            border: none;
+            margin-bottom: 1vw;
+            // align to bottom
+            margin-top: auto;
+            margin-bottom: 0;
+        }
+    }
+
+    .image1 {
+        width: 100%;
+        height: 25vw;
+        object-fit: cover;
+        margin-bottom: 1vw;
+        cursor: pointer;
+        border-radius: 1vw;
+    }
+
+    .head {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1vw;
+
+        h1 {
+            width: 84%;
+            margin-right: 1vw;
+            border: none;
+            height: 3vw;
+            color: $dark;
+            font-family: "Visby Bold";
+            font-size: 3vw;
+
+        }
+
+        p {
+            width: 15%;
+            border: none;
+            height: 3vw;
+            color: $dark;
+            font-family: "Visby Bold";
+            font-size: 1vw;
+        }
+
+    }
+
+    .content {
+        margin-top: 1vw;
+
+        p {
+            width: 100%;
+            height: max-content;
+            margin: 2vw 0;
+            border: none;
+            color: $dark;
+            font-family: "Visby Regular";
+            font-size: 1.2vw;
+            letter-spacing: 0.1vw;
+            line-height: 1.5vw;
+
+        }
+
+        .image2 {
+            display: flex;
+            gap: 1vw;
+
+            img {
+                width: 37vw;
+                height: max-content;
+                object-fit: cover;
+                border-radius: 1vw;
+                cursor: pointer;
+            }
+        }
+
+
+
+        .image3 {
+            width: 100%;
+            height: 25vw;
+            object-fit: cover;
+            margin-bottom: 1vw;
+            cursor: pointer;
+            border-radius: 1vw;
+        }
+    }
+
+
+}
