--- a/styles/admin/components/layouts.module.scss
+++ b/styles/admin/components/layouts.module.scss
@@ -185,7 +185,7 @@
                 padding: 0 1vw;
                 border: rgb(245, 104, 104) 0.1vw solid;
                 background: $light;
-                color: rgb(245, 104, 104) ;
+                color: rgb(245, 104, 104);
                 font-family: "Visby Regular";
                 font-size: 1.5vw;
                 cursor: pointer;
@@ -291,4 +291,303 @@
     }
 
 
+}
+
+.layout2 {
+    width: 85vw;
+    margin-left: 15vw;
+    padding: 1vw 5vw 5vw 5vw;
+    transition: all 0.3s ease-in-out;
+
+    form {
+        .head {
+
+            .image {
+                float: left;
+
+                img {
+                    width: 35vw;
+                    height: 30vw;
+                    object-fit: cover;
+                    border-radius: 1vw;
+                    cursor: pointer;
+                    margin: 0 1.5vw 1vw 0;
+                }
+
+                input {
+                    display: none;
+                }
+            }
+
+            input {
+                &:nth-child(1) {
+                    width: 37vw;
+                    height: 3vw;
+                    margin: 1vw 0;
+                    border: none;
+                    color: $dark;
+                    font-family: "Visby Bold";
+                    font-size: 2vw;
+
+                    &::placeholder {
+                        font-family: "Visby Bold";
+                        font-size: 2vw;
+                        color: $secondary;
+                    }
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+
+                &:nth-child(2) {
+                    width: 10vw;
+                    height: 2vw;
+                    margin: 1vw 0;
+                    border: none;
+                    color: $dark;
+                    font-family: "Visby Bold";
+                    font-size: 1vw;
+
+                    &::placeholder {
+                        font-family: "Visby Bold";
+                        font-size: 1.5vw;
+                        color: $secondary;
+                    }
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+            }
+
+            textarea {
+                &:nth-of-type(1) {
+                    width: 37vw;
+                    height: 22vw;
+                    border: none;
+                    color: $dark;
+                    font-family: "Visby Regular";
+                    font-size: 1vw;
+
+                    &::placeholder {
+                        font-family: "Visby Regular";
+                        font-size: 1vw;
+                        color: $secondary;
+                    }
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+
+                &:nth-of-type(2) {
+                    width: 100%;
+                    height: 10vw;
+                    border: none;
+                    color: $dark;
+                    font-family: "Visby Regular";
+                    font-size: 1vw;
+
+                    &::placeholder {
+                        font-family: "Visby Regular";
+                        font-size: 1vw;
+                        color: $secondary;
+                    }
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+            }
+
+
+        }
+
+        .content {
+            margin-top: 1vw;
+
+            input {
+                display: none
+            }
+
+            label {
+                img {
+                    width: 100%;
+                    height: 30vw;
+                    object-fit: cover;
+                    margin-bottom: 1vw;
+                    cursor: pointer;
+                    border-radius: 1vw;
+                }
+            }
+
+            textarea {
+                width: 100%;
+                height: 10vw;
+                margin: 2vw 0;
+                border: none;
+                color: $dark;
+                font-family: "Visby Regular";
+                font-size: 1vw;
+                letter-spacing: 0.1vw;
+                line-height: 1.5vw;
+                resize: none;
+
+                &::placeholder {
+                    font-family: "Visby Regular";
+                    font-size: 1vw;
+                    letter-spacing: 0.1vw;
+                    line-height: 1.5vw;
+                    color: $secondary;
+                }
+
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+
+        button {
+            width: 100%;
+            height: 5vw;
+            border: none;
+            background: $primary;
+            color: $light;
+            font-family: "Visby Bold";
+            font-size: 1.5vw;
+            cursor: pointer;
+            margin-top: 1vw;
+
+            &:focus {
+                outline: none;
+            }
+
+
+        }
+    }
+}
+
+.layout3 {
+    width: 85vw;
+    margin-left: 15vw;
+    padding: 1vw 5vw 5vw 5vw;
+    transition: all 0.3s ease-in-out;
+
+    .head {
+        label {
+            img {
+                width: 100%;
+                height: 30vw;
+                object-fit: cover;
+                margin-bottom: 1vw;
+                cursor: pointer;
+                border-radius: 1vw;
+            }
+        }
+
+        input {
+            display: none;
+            height: 0;
+            width: 0;
+        }
+
+        .title {
+            display: flex;
+
+            input {
+                display: block;
+
+                &:nth-child(1) {
+                    width: 100%;
+                    height: 3vw;
+                    margin: 1vw 0;
+                    border: none;
+                    color: $dark;
+                    font-family: "Visby Bold";
+                    font-size: 2vw;
+
+                    &::placeholder {
+                        font-family: "Visby Bold";
+                        font-size: 2vw;
+                        color: $secondary;
+                    }
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+
+                &:nth-child(2) {
+                    width: 10vw;
+                    height: 2vw;
+                    margin: 1vw 0;
+                    border: none;
+                    color: $dark;
+                    font-family: "Visby Bold";
+                    font-size: 1vw;
+
+                    &::placeholder {
+                        font-family: "Visby Bold";
+                        font-size: 1.5vw;
+                        color: $secondary;
+                    }
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+            }
+        }
+
+    }
+
+    .content {
+        margin-top: 1vw;
+
+        textarea {
+            width: 100%;
+            height: 10vw;
+            margin: 2vw 0;
+            border: none;
+            color: $dark;
+            font-family: "Visby Regular";
+            font-size: 1vw;
+            letter-spacing: 0.1vw;
+            line-height: 1.5vw;
+            resize: none;
+
+            &::placeholder {
+                font-family: "Visby Regular";
+                font-size: 1vw;
+                letter-spacing: 0.1vw;
+                line-height: 1.5vw;
+                color: $secondary;
+            }
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+
+    }
+
+    button {
+        width: 100%;
+        height: 5vw;
+        border: none;
+        background: $primary;
+        color: $light;
+        font-family: "Visby Bold";
+        font-size: 1.5vw;
+        cursor: pointer;
+        margin-top: 1vw;
+
+        &:focus {
+            outline: none;
+        }
+
+
+    }
 }
