--- a/styles/admin/auth.module.scss
+++ b/styles/admin/auth.module.scss
@@ -9,10 +9,9 @@
     width: 100vw;
     gap: 5vw;
 
-    h2 {
-        color: $primary;
-        font-size: 5vw;
-        font-family: 'Visby Heavy';
+    img {
+        width: 40vw;
+        height: max-content;
     }
 
     form {
