--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -266,7 +266,7 @@
 
 
             img {
-                width: max-content;
+                width: 25vw;
                 height: 25vw;
                 border-radius: 1vw;
                 object-fit: cover;
@@ -1004,7 +1004,7 @@
 
 
                 img {
-                    width: max-content;
+                    width: 35vw;
                     height: 35vw;
                     border-radius: 1vw;
                     object-fit: cover;
