--- a/styles/clientBlog.module.scss
+++ b/styles/clientBlog.module.scss
@@ -167,6 +167,10 @@
     .blog{
         margin-top: 15vw;
         min-height: 80vh;
+
+        h1{
+            font-size: 6vw;
+        }
     }
     .blog1 {
         h3 {
