--- a/styles/clientBlog.module.scss
+++ b/styles/clientBlog.module.scss
@@ -1,7 +1,8 @@
 @import './theme.scss';
 
 .blog {
-    margin-top: 7vw;
+    padding: 7vw 10vw 0 10vw;
+
     h1{
         font-size: 3vw;
         font-family: 'Visby Bold';
@@ -11,7 +12,6 @@
 }
 
 .blog3 {
-    padding: 0 5vw;
     margin-bottom: 3vw;
 
     img {
@@ -53,7 +53,6 @@
 }
 
 .blog2 {
-    padding: 0 5vw;
     margin-top: 3vw;
     margin-bottom: 3vw;
 
@@ -105,7 +104,6 @@
 }
 
 .blog1 {
-    padding: 0 5vw;
     margin-top: 3vw;
     margin-bottom: 3vw;
 
