--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -592,6 +592,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10vw;
 
     .bg_plane {
         position: absolute;
