--- a/styles/work-page.module.scss
+++ b/styles/work-page.module.scss
@@ -1,8 +1,8 @@
 @import './theme.scss';
 
 .work_page {
-    margin-top: 7vw;
-    padding: 0 5vw;
+    padding: 7vw 10vw 0 10vw;
+
     margin-bottom: 3vw;
 
     h1 {
@@ -50,6 +50,59 @@
             cursor: pointer;
             margin-bottom: 1vw;
             object-fit: cover;
+        }
+    }
+
+    .explore {
+        margin-top:5vw;
+        h4 {
+            font-size: 2.5vw;
+            font-family: 'Visby Bold';
+            margin: 1vw 0;
+            color: $primary;
+        }
+
+        .scroll {
+            display: flex;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            gap: 2vw;
+            margin-bottom: 2vw;
+            margin-right: -10vw;
+
+
+            // design scrollbar
+            &::-webkit-scrollbar {
+                width: .5vw;
+                height: .55vw;
+
+
+
+
+                &-track {
+                    background: $light;
+                    border-radius: 1vw;
+                }
+
+                &-thumb {
+                    background: $primary;
+                    border-radius: 1vw;
+                }
+
+                &-button {
+                    display: none;
+                }
+
+
+            }
+
+
+            img {
+                width: 25vw;
+                height: 25vw;
+                border-radius: 1vw;
+                object-fit: cover;
+            }
         }
     }
 }
