--- a/styles/global.scss
+++ b/styles/global.scss
@@ -23,3 +23,28 @@ a {
     margin: 0;
     padding: 0;
 }
+
+// circle following mouse
+#cursor {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(-50%) translateY(-50%);
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid #fff;
+    z-index: 9999;
+    pointer-events: none;
+
+    span {
+        width: 3px;
+        height: 3px;
+        border-radius: 50%;
+        background-color: #fff;
+        z-index: 9999;
+        pointer-events: none;
+    }
+}
