--- a/styles/global.scss
+++ b/styles/global.scss
@@ -26,25 +26,47 @@ a {
 
 // circle following mouse
 #cursor {
-    width: 40px;
-    height: 40px;
+    width: 2vw;
+    height: 2vw;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     transform: translateX(-50%) translateY(-50%);
     border-radius: 50%;
-    background-color: transparent;
-    border: 2px solid #fff;
+    background-color: #c2d9508f;
+    outline: .2vw solid #C2D950;
+    outline-offset: .2vw;
     z-index: 9999;
     pointer-events: none;
 
+
+
     span {
-        width: 3px;
-        height: 3px;
+        width: 1px;
+        height: 1px;
         border-radius: 50%;
-        background-color: #fff;
+        background-color: #C2D950;
         z-index: 9999;
         pointer-events: none;
+    }
+}
+
+
+
+img {
+    :hover {
+        +#cursor {
+            background-color: #c2d950;
+            outline: 1.0vw solid #C2D950;
+            outline-offset: 1.2vw;
+        }
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    #cursor {
+        display: none;
     }
 }
