--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -113,18 +113,18 @@
 
                 &:hover {
                     .dropdown {
-                        height: max-content;
+                        height: 20vw;
                         padding: 1vw;
                         padding-top: 2vw;
                         opacity: 1;
-                        transition: opacity 0.5s .2s ease-in-out;
+                        font-size: 1vw;
+                        transition: all 0.2s 0.2s ease-in-out, font-size 0.2s 0.2s ease-in-out,opacity 0.5s 0.5s ease-in-out;
                     }
                 }
 
                 .dropdown {
                     position: absolute;
-                    height: 0;
-                    font-size: 1vw;
+                    font-size: 0vw;
                     width: 20vw;
                     left: -1vw;
                     border-radius: 0 0 .5vw .5vw;
@@ -138,6 +138,7 @@
                     opacity: 0;
                     background-color: $dark;
                     // transition: all 0.5s .5s ease-in-out, opacity 0.3s ease;
+                    height: 0vw;
 
                     span {
                         color: $light;
