--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -8,9 +8,14 @@
     display: block;
 }
 
+.tablet_particles {
+    display: none;
+}
+
 .langingPage {
     background: $dark;
     height: 100vh;
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -532,6 +537,12 @@
                 width: 15vw;
                 height: max-content;
             }
+
+            .carousel {
+                padding: 0 3vw;
+                justify-content: space-around;
+                align-items: center;
+            }
         }
 
         .right {
@@ -554,7 +565,6 @@
             h2 {
                 font-size: 3vw;
                 font-family: 'Visby Medium';
-                letter-spacing: .2vw;
                 margin: 0;
             }
 
@@ -583,6 +593,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+
 
         &:nth-child(3n) {
             img {
@@ -814,16 +825,23 @@
         display: block;
     }
 
+    .tablet_particles {
+        display: none;
+    }
+
     .langingPage {
-        background: $dark;
-        height: 30vh;
-        position: relative;
+        width: 100vw;
+        height: max-content;
         display: flex;
         justify-content: center;
+        align-items: center;
+
+        video {
+            width: 100vw;
+        }
 
         .scroll_down {
             display: none;
-
         }
     }
 
@@ -1231,12 +1249,10 @@
                 width: 50%;
 
                 h2 {
-                    font-size: 2.5vw;
-                    letter-spacing: .1vw;
-                    font-family: 'Visby Thin';
+                    font-size: 2vw;
+                    font-family: 'Visby Regular';
                     margin-bottom: 3vw;
                     width: 30vw;
-                    line-height: 3vw;
                     line-height: 3vw;
                 }
 
@@ -1249,7 +1265,7 @@
                 }
 
                 p {
-                    font-size: 1.5vw;
+                    font-size: 1.1vw;
                     font-family: 'Visby Thin';
                     line-height: 2.5vw;
                     letter-spacing: .2vw;
@@ -1257,7 +1273,7 @@
                 }
 
                 h4 {
-                    font-size: 1.3vw;
+                    font-size: 1vw;
                     font-family: 'Visby Thin';
                     line-height: 2.5vw;
                     letter-spacing: .2vw;
@@ -1273,6 +1289,12 @@
                     width: 15vw;
                     height: max-content;
                 }
+
+                .carousel {
+                    padding: 0 5vw;
+                    justify-content: space-around;
+                    align-items: center;
+                }
             }
 
             .right {
@@ -1285,29 +1307,28 @@
                     font-size: 3vw;
                     font-family: 'Visby Medium';
                     letter-spacing: .2vw;
-    
+
                     margin: 0;
-    
+
                 }
-    
+
                 h2 {
                     font-size: 3vw;
                     font-family: 'Visby Medium';
-                    letter-spacing: .2vw;
                     margin: 0;
                 }
-    
+
                 .counter {
                     display: flex;
-    
+
                     h1 {
                         min-width: 11vw;
                         max-width: 11vw;
                     }
                 }
-    
-            
-                
+
+
+
             }
 
 
@@ -1320,7 +1341,9 @@
         padding: 0 10vw;
         margin: 10vw 0 5vw 0;
 
+
         .carousel {
+            padding: 0 5vw;
             display: flex;
             justify-content: space-around;
             align-items: center;
@@ -1328,16 +1351,19 @@
 
 
             img {
-                width: 15vw;
+                width: 7vw;
                 height: max-content;
 
-                &:nth-child(3n) {
+                &:nth-child(3) {
                     img {
-                        width: 50vw;
+                        width: 10vw;
                         height: max-content;
                     }
                 }
+
             }
+
+
         }
     }
 
@@ -1528,8 +1554,8 @@
                 width: 50%;
 
                 img {
-                    width: 40vw;
-                    height: max-content;
+                    width: max-content;
+                    height: 35vw;
                 }
 
                 .apple_play_store {
@@ -1546,4 +1572,37 @@
             }
         }
     }
+}
+
+@media screen and (min-width:$mobile ) and (max-width: $tablet) {
+    .mobile_particles {
+        display: none;
+    }
+
+    .lap_particles {
+        display: none;
+    }
+
+    .tablet_particles {
+        display: block;
+
+
+    }
+
+    .langingPage {
+        width: 100vw;
+        height: 60vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        video {
+            width: 100vw;
+        }
+
+        .scroll_down {
+            display: none;
+        }
+    }
+
 }
