--- a/styles/contact-us.module.scss
+++ b/styles/contact-us.module.scss
@@ -1,6 +1,19 @@
 @import "./theme.scss";
 
+.mobile_particles {
+    display: none;
+}
+
+.lap_particles {
+    display: block;
+}
+
+.tablet_particles {
+    display: none;
+}
+
 .contact_us {
+    min-height: 85vh;
 
     .content {
         display: flex;
@@ -169,6 +182,18 @@
 }
 
 @media screen and (max-width: $mobile) {
+    .lap_particles {
+        display: none;
+    }
+
+    .mobile_particles {
+        display: block;
+    }
+
+    .tablet_particles {
+        display: none;
+    }
+
     .contact_us {
 
         .content {
@@ -245,7 +270,7 @@
                             }
                         }
 
-                      
+
 
 
                     }
@@ -265,7 +290,7 @@
                         transition: all .3s ease-in-out;
 
 
-                     
+
                     }
                 }
             }
@@ -310,5 +335,19 @@
                 }
             }
         }
+    }
+}
+
+@media screen and (min-width:$mobile ) and (max-width: $tablet) {
+    .lap_particles {
+        display: none;
+    }
+
+    .mobile_particles {
+        display: none;
+    }
+
+    .tablet_particles {
+        display: block;
     }
 }
