--- a/styles/carrers.module.scss
+++ b/styles/carrers.module.scss
@@ -1,5 +1,17 @@
 @import "./theme.scss";
 
+.mobile_particles {
+    display: none;
+}
+
+.lap_particles {
+    display: block;
+}
+
+.tablet_particles {
+    display: none;
+}
+
 .carrers {
     padding: 10vw 10vw;
 
@@ -75,21 +87,23 @@
         }
     }
 
-    .content{
-        h3{
+    .content {
+        h3 {
             font-size: 2vw;
             color: $primary;
             font-family: "Visby Medium";
             margin-top: 5vw;
         }
-        h1{
+
+        h1 {
             font-size: 4vw;
             color: $dark;
             font-family: "Visby Bold";
             margin-top: 1vw;
             width: 80vw;
         }
-        p{
+
+        p {
             font-size: 2vw;
             color: $dark;
             font-family: "Visby Regular";
@@ -101,20 +115,32 @@
 }
 
 @media screen and (max-width: $mobile) {
+    .mobile_particles {
+        display: block;
+    }
+
+    .lap_particles {
+        display: none;
+    }
+
+    .tablet_particles {
+        display: none;
+    }
+
     .carrers {
         padding: 10vw 10vw;
-    
+
         h1 {
             font-size: 3.5vw;
             color: $dark;
             font-family: "Visby Bold";
             width: 50vw;
-    
-    
+
+
             span {
                 color: $dark;
                 position: relative;
-    
+
                 .background {
                     position: absolute;
                     height: 2vw;
@@ -125,7 +151,7 @@
                 }
             }
         }
-    
+
         p {
             font-size: 2.5vw;
             color: $dark;
@@ -134,7 +160,7 @@
             margin-top: 2vw;
             line-height: 3.5vw;
         }
-    
+
         .images {
             display: flex;
             flex-direction: row;
@@ -143,12 +169,12 @@
             margin-right: -10vw;
             gap: 5vw;
             overflow-x: auto;
-    
+
             // scrollbar
             &::-webkit-scrollbar {
                 display: none;
             }
-    
+
             img {
                 width: max-content;
                 height: 30vw;
@@ -158,27 +184,29 @@
                 justify-content: center;
                 align-items: center;
                 cursor: pointer;
-    
-    
+
+
             }
         }
-    
-        .content{
-            h3{
+
+        .content {
+            h3 {
                 font-size: 2.5vw;
                 color: $primary;
                 font-family: "Visby Medium";
                 margin-top: 5vw;
                 letter-spacing: 0.1vw;
             }
-            h1{
+
+            h1 {
                 font-size: 4.5vw;
                 color: $dark;
                 font-family: "Visby Bold";
                 margin-top: 1vw;
                 width: 80vw;
             }
-            p{
+
+            p {
                 font-size: 2.5vw;
                 color: $dark;
                 font-family: "Visby Regular";
@@ -188,5 +216,19 @@
             }
         }
     }
-    
+
+}
+
+@media screen and (min-width:$mobile ) and (max-width: $tablet) {
+    .lap_particles {
+        display: none;
+    }
+
+    .mobile_particles {
+        display: none;
+    }
+
+    .tablet_particles {
+        display: block;
+    }
 }
