--- a/styles/services.module.scss
+++ b/styles/services.module.scss
@@ -1,5 +1,17 @@
 @import "./theme.scss";
 
+.mobile_particles {
+    display: none;
+}
+
+.lap_particles {
+    display: block;
+}
+
+.tablet_particles {
+    display: none;
+}
+
 .services {
     padding: 10vw 10vw 0 10vw;
 
@@ -20,16 +32,28 @@
 }
 
 @media screen and (max-width: $mobile) {
+    .mobile_particles {
+        display: block;
+    }
+
+    .lap_particles {
+        display: none;
+    }
+
+    .tablet_particles {
+        display: none;
+    }
+
     .services {
         padding: 10vw 10vw 0 10vw;
-    
+
         h2 {
             font-size: 4vw;
             margin: 0;
             font-family: "Visby bold";
-    
+
         }
-    
+
         .paragraph {
             font-size: 2vw;
             font-family: "Visby regular";
@@ -38,5 +62,19 @@
             width: 50vw;
         }
     }
-    
+
+}
+
+@media screen and (min-width:$mobile ) and (max-width: $tablet) {
+    .lap_particles {
+        display: none;
+    }
+
+    .mobile_particles {
+        display: none;
+    }
+
+    .tablet_particles {
+        display: block;
+    }
 }
