--- a/styles/components/blogCarousel.module.scss
+++ b/styles/components/blogCarousel.module.scss
@@ -1,10 +1,10 @@
 @import '../theme.scss';
 
 .blogCarousel {
-    padding-left: 10vw;
-    margin: 5vw 0vw 0vw 0vw;
+    padding: 0 10vw;
 
     .content {
+        margin: 5vw 0vw -10vw 0vw;
         display: flex;
         gap: 2vw;
         overflow-x: scroll;
@@ -12,9 +12,11 @@
         // scrollbar
         &::-webkit-scrollbar {
             height: 0.5vw;
+
             &-track {
                 background: transparent;
             }
+
             &-thumb {
                 background: $primary;
                 border-radius: 1vw;
@@ -34,23 +36,23 @@
             padding: 2.5vw;
             border-radius: 2vw;
             box-shadow: 0vw 0vw 1vw 0vw rgba(0, 0, 0, 0.2);
-            
-            h5{
+
+            h5 {
                 font-size: 1vw;
                 font-family: 'Visby Regular';
                 color: rgb(119, 119, 119);
                 margin: 0;
             }
 
-            h3{
+            h3 {
                 font-size: 1.8vw;
                 font-family: 'Visby Bold';
                 color: $dark;
                 margin: 0;
                 margin-top: .5vw;
             }
-            
-            p{
+
+            p {
                 font-size: 1.3vw;
                 font-family: 'Visby Regular';
                 color: $dark;
@@ -63,14 +65,14 @@
 
 @media screen and (max-width: $mobile) {
     .blogCarousel {
-        padding-left: 5vw;
-        margin: 10vw 0vw 10vw 0vw;
+        padding: 0 10vw;
 
         .content {
+            margin: 5vw 0vw -10vw 0vw;
             gap: 5vw;
 
             &::-webkit-scrollbar {
-               display: none;
+                display: none;
             }
 
             .card {
@@ -81,23 +83,23 @@
                 padding: 5vw;
                 border-radius: 2vw;
                 box-shadow: 0vw 0vw 1vw 0vw rgba(0, 0, 0, 0.2);
-                
-                h5{
+
+                h5 {
                     font-size: 2.5vw;
                     font-family: 'Visby Regular';
                     color: rgb(119, 119, 119);
                     margin: 0;
                 }
 
-                h3{
+                h3 {
                     font-size: 3vw;
                     font-family: 'Visby Bold';
                     color: $dark;
                     margin: 0;
                     margin-top: 2vw;
                 }
-                
-                p{
+
+                p {
                     font-size: 2.8vw;
                     letter-spacing: 0.1vw;
                     font-family: 'Visby Regular';
