--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -586,26 +586,30 @@
 }
 
 .cutomers_gallery {
+    margin-top: 5vw;
     padding: 0 10vw;
-    margin: 10vw 0 5vw 0;
 
-    .carousel {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+    .content {
+        padding-top: 5vw;
+
+        .carousel {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
 
 
-        &:nth-child(3n) {
+            // &:nth-child(3n) {
+            //     img {
+            //         width: 50vw;
+            //         height: max-content;
+            //     }
+            // }
+
             img {
-                width: 50vw;
+                width: 10vw;
                 height: max-content;
+
             }
-        }
-
-        img {
-            width: 5vw;
-            height: max-content;
-
         }
     }
 }
@@ -795,6 +799,10 @@
 
         .right {
             width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
 
             img {
                 width: 40vw;
@@ -1338,32 +1346,31 @@
     }
 
     .cutomers_gallery {
+        margin-top: 5vw;
         padding: 0 10vw;
-        margin: 10vw 0 5vw 0;
-
-
-        .carousel {
-            padding: 0 5vw;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-
-
-
-            img {
-                width: 7vw;
-                height: max-content;
-
-                &:nth-child(3) {
-                    img {
-                        width: 10vw;
-                        height: max-content;
-                    }
+    
+        .content {
+            padding-top: 5vw;
+    
+            .carousel {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+    
+    
+                // &:nth-child(3n) {
+                //     img {
+                //         width: 50vw;
+                //         height: max-content;
+                //     }
+                // }
+    
+                img {
+                    width: 10vw;
+                    height: max-content;
+    
                 }
-
             }
-
-
         }
     }
 
@@ -1552,10 +1559,14 @@
 
             .right {
                 width: 50%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
 
                 img {
                     width: max-content;
-                    height: 35vw;
+                    height: 22vw;
                 }
 
                 .apple_play_store {
