--- a/styles/components/contentLayouts.module.scss
+++ b/styles/components/contentLayouts.module.scss
@@ -3,6 +3,7 @@
 
 .Layout1 {
     padding: 0 10vw;
+    font-family: 'Visby Regular';
 
     h1 {
         color: $primary;
@@ -39,6 +40,8 @@
 }
 
 .Layout2 {
+    font-family: 'Visby Regular';
+
     padding: 0 10vw;
 
     h1 {
@@ -65,6 +68,7 @@
 }
 
 .Layout3 {
+    font-family: 'Visby Regular';
     padding: 0 10vw;
 
     h1 {
@@ -85,6 +89,8 @@
 }
 
 .Layout4 {
+    font-family: 'Visby Regular';
+
     padding: 0 10vw;
 
     h1 {
