--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -113,12 +113,12 @@
 
                 &:hover {
                     .dropdown {
-                        height: 20vw;
+                        height: max-content;
                         padding: 1vw;
                         padding-top: 2vw;
                         opacity: 1;
                         font-size: 1vw;
-                        transition: all 0.2s 0.2s ease-in-out, font-size 0.2s 0.2s ease-in-out,opacity 0.5s 0.5s ease-in-out;
+                        transition: all 0.2s 0.2s ease-in-out, font-size 0.2s 0.2s ease-in-out, opacity 0.5s 0.5s ease-in-out;
                     }
                 }
 
