--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -485,22 +485,15 @@
         display: flex;
         gap: 5vw;
 
-        hr {
-            width: .1vw;
-            height: 30vw;
-            background-color: rgba(255, 255, 255, 0.400);
-            border: none;
-            align-self: center
-        }
 
         .left {
-            width: 50%;
+            width: 100%;
 
             h2 {
                 font-size: 2vw;
                 font-family: 'Visby Regular';
                 margin-bottom: 3vw;
-                width: 30vw;
+                width: 100%;
                 line-height: 3vw;
             }
 
@@ -509,7 +502,8 @@
                 height: 0.1vw;
                 background-color: rgba(255, 255, 255, 0.400);
                 border: none;
-                align-self: center
+                align-self: center;
+                margin-bottom: 3vw;
             }
 
             p {
@@ -539,45 +533,15 @@
             }
 
             .carousel {
-                padding: 0 3vw;
-                justify-content: space-around;
-                align-items: center;
-            }
-        }
-
-        .right {
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-
-            h1 {
-                font-size: 3vw;
-                font-family: 'Visby Medium';
-                letter-spacing: .2vw;
-
-                margin: 0;
-
-            }
-
-            h2 {
-                font-size: 3vw;
-                font-family: 'Visby Medium';
-                margin: 0;
-            }
-
-            .counter {
                 display: flex;
-
-                h1 {
-                    min-width: 11vw;
-                    max-width: 11vw;
-                }
+                flex-direction: column;
+                padding: 0 3vw;
+                justify-content: center;
+                min-height: 18vw;
+                margin-bottom: 3vw;
             }
-
         }
+
 
 
 
@@ -590,7 +554,7 @@
     padding: 0 10vw;
 
     .content {
-        padding-top: 5vw;
+        padding: 5vw 0vw;
 
         .carousel {
             display: flex;
@@ -1348,27 +1312,27 @@
     .cutomers_gallery {
         margin-top: 5vw;
         padding: 0 10vw;
-    
+
         .content {
             padding-top: 5vw;
-    
+
             .carousel {
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
-    
-    
+
+
                 // &:nth-child(3n) {
                 //     img {
                 //         width: 50vw;
                 //         height: max-content;
                 //     }
                 // }
-    
+
                 img {
                     width: 10vw;
                     height: max-content;
-    
+
                 }
             }
         }
