--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -537,7 +537,7 @@
                 flex-direction: column;
                 padding: 0 3vw;
                 justify-content: center;
-                min-height: 18vw;
+                height: 18vw;
                 margin-bottom: 3vw;
             }
         }
