--- a/styles/components/workNumbers.module.scss
+++ b/styles/components/workNumbers.module.scss
@@ -22,7 +22,7 @@
             min-width: 22vw;
             font-family: 'Visby Bold';
             -webkit-text-fill-color: transparent;
-            -webkit-text-stroke: .1vw;
+            -webkit-text-stroke: 1px;
 
 
             color: $dark;
@@ -58,7 +58,7 @@
                 min-width: 22vw;
                 font-family: 'Visby Bold';
                 -webkit-text-fill-color: transparent;
-                -webkit-text-stroke: .1vw;
+                -webkit-text-stroke: 1px;
                 color: $dark;
             }
 
