--- a/styles/terms.module.scss
+++ b/styles/terms.module.scss
@@ -6,14 +6,14 @@
     padding: 10vw 15vw;
 
     h1 {
-        font-family: "Visby Bold";
+        font-family: "Visby Semibold";
         font-size: 3.5vw;
         color: $dark;
         margin-bottom: 2vw;
     }
 
     h2 {
-        font-family: "Visby Bold";
+        font-family: "Visby Semibold";
         font-size: 2.5vw;
         color: $dark;
         margin-bottom: 1vw;
