--- a/styles/components/footer.module.scss
+++ b/styles/components/footer.module.scss
@@ -104,6 +104,21 @@
             }
         }
     }
+
+
+}
+
+
+.madeBy {
+    margin: 0;
+    background-color: rgb(41, 41, 41);
+    cursor: pointer;
+    text-align: center;
+    width: 100%;
+    padding: .5rem;
+    color: #fff;
+    font-size: .8rem;
+
 }
 
 @media screen and (max-width: $mobile) {
@@ -190,7 +205,7 @@
                     margin: 0;
                     padding: 0;
 
-                    
+
                 }
 
                 .whatsapp {
@@ -209,4 +224,15 @@
         }
     }
 
+    .madeBy {
+        margin: 0;
+        background-color: rgb(41, 41, 41);
+        cursor: pointer;
+        text-align: center;
+        width: 100%;
+        padding: .25rem;
+        color: #fff;
+        font-size: .4rem;
+    
+    }
 }
