--- a/styles/admin/components/navbar.module.scss
+++ b/styles/admin/components/navbar.module.scss
@@ -7,6 +7,11 @@
     width: 15vw;
     height: 100vh;
     box-shadow: 0 0 .5vw rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
 
     h1 {
         text-align: center;
