--- a/styles/contact-us.module.scss
+++ b/styles/contact-us.module.scss
@@ -34,6 +34,7 @@
                     border-bottom: .1vw solid #000;
                     width: 100%;
                     height: 2vw;
+                    background-color: transparent;
 
                     &::placeholder {
                         color: rgb(0, 0, 0);
@@ -76,6 +77,7 @@
                     border-bottom: 1px solid #000;
                     width: 100%;
                     height: 5vw;
+                    background-color: transparent;
 
 
                     &::placeholder {
