--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,5 @@
 @import "../asset/visby-cufonfonts-webfont/style.css";
+// @import "~bootstrap/scss/bootstrap";
 
 body {
     padding: 0;
@@ -36,13 +37,13 @@ a {
 
 
 
-@media screen and (max-width: 900) {
-    font-size: 3vw;
-}
+    @media screen and (max-width: 900) {
+        font-size: 3vw;
+    }
 
-@media screen and (max-width: 600) {
-    font-size: 6vw;
-}
+    @media screen and (max-width: 600) {
+        font-size: 6vw;
+    }
 
 }
 
